Fixing Native Output